--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "author": "Valentin Barral",
   "license": "MIT",
-  "publisher": "local",
+  "publisher": "valentinbarral",
   "repository": {
     "type": "git",
     "url": "https://github.com/valba8/gunacode"
